--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "2.8.8",
+    "@typescript-eslint/parser": "^6.8.0",
     "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "buffer": "6.0.3",
