--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "buffer": "6.0.3",
-    "classnames": "2.3.1",
+    "classnames": "^2.3.2",
     "css-loader": "5.2.7",
     "events": "3.3.0",
     "framer-motion": "6.2.9",
